style-new.css
@import url(http://fonts.googleapis.com/css?family=Crimson+Text:400,700);

	html {
		background: url('library.jpg') no-repeat center center fixed;
		-webkit-background-size: cover;
		-moz-background-size: cover;
		-o-background-size: cover;
		background-size: cover;
	}
		
        body, p {
		font-family: Georgia, 'PT Sans', sans-serif;
		color: #444;
		margin: 0px;
		padding: 0px;
		font-size: 14px;
		line-height: 1.5em;
        }

        .theory-section p {
		color: #222;
		margin: 0px;
		margin-bottom: 1rem;
		border: none;
		text-indent: 1rem;
        }
		
	h1 {
		font-family: 'Crimson Text', serrif;
		font-weight: bold;
		color: #333;
		font-size: 28px;
		margin: 0 0 1rem 0;
		text-transform: uppercase;
		letter-spacing: 0.09em;
		margin-top: 10px;
	}

	h2 {
		font-family: 'Crimson Text', serrif;
		font-weight: 500;
		color: #333;
		font-size: 22px;
		margin-bottom: 1rem
	}

	img {
		padding: 10px;
	}

        #theory-viewer {
                margin: 50px auto;
		position:relative;
                width: 1000px;
                height: 600px;
                overflow: hidden;
        }

        #theory-container {

                width: 150000px;
        }

        .theory-column {
                width: 1000px;
                float: left;
				margin-right: 500px;
        }

        .theory-section {
		position: relative;
                color: #333;
                height: 480px;
		margin-bottom: 250px;
		padding: 60px 120px;
                background:rgba(255,255,255,0.8);
        }



	/* Navigation Styling */

	#theory-links {

	height: 55px;
	position:relative;
	left: 0;
	width: 100%;
	margin: 0 auto;	
	margin-bottom: 0px;
	padding: 0;
	background:rgba(255,255,255,0.5);
	z-index:3;

	}

	#theory-links ul{
		width: 1000px;
		position:relative;
		margin: 0px auto;
		padding: 0;
		list-style: none;
	}	


	#theory-links .button {
		position: relative;
		height: 25px;

		overflow: hidden;
		margin: 105px 8px 0px 0px;
		border: 3px double #ccc;
		text-align:justify;
		text-decoration: none;
		font-size: 14px;
		font-weight: bold;
		color: #333;
		padding: 5px 9px;
		background:rgba(255,255,255,0.95);

		line-height:50%;
		-webkit-transition: all 100ms linear;
		-moz-transition: all 100ms linear;
		-o-transition: all 100ms linear;
		-ms-transition: all 100ms linear;
		transition: all 100ms linear;
	
	}
	
	#theory-links .button:hover {
		color:#2676ac;
		background: #e1f0fa;
		border-color: #c1d0da;

		background-position: 0 -10px !important;
	}
	
	#theory-links .button:active {
		background-position: 0 -30px !important;
		box-shadow: 0 0 0 rgba(0, 0, 0, 0.10);
		-moz-box-shadow: 0 0 0 rgba(0, 0, 0, 0.10);
		-webkit-box-shadow: 0 0 0 rgba(0, 0, 0, 0.10);	
	}
	

	#theory-links li{
		float: left;
		display: inline-block;
		margin-top:20px;
		}
	
	#theory-links .current a {
		color:#2676ac;
		background: #e1f0fa;
	}


	/*Navigation arrow styling */

	.arrow-left,
	.arrow-right,
	.arrow-down,
	.arrow-up {

		border-radius:100px;
		-moz-border-radius:100px;
		-webkit-border-radius:100px;
		-khtml-border-radius:100px;
		border:4px #ccc double;
		background: #fff url("arrow_left.png");
		background-repeat:no-repeat;
		background-position:center;
		-webkit-transition: all 100ms linear;
		-moz-transition: all 100ms linear;
		-o-transition: all 100ms linear;
		-ms-transition: all 100ms linear;
		transition: all 100ms linear;
		box-shadow: -4px 4px 0px rgba(0, 0, 0, 0.10);
		-moz-box-shadow: -4px 4px 0px rgba(0, 0, 0, 0.10);
		-webkit-box-shadow: -4px 4px 0px rgba(0, 0, 0, 0.10);
	}
	.arrow-left {
		position: absolute;
		left: 10px;
		top: 287px;
		z-index: 2;
		width: 40px;
		height:40px;
	}

	.arrow-right {
		position: absolute;
		right: 10px;
		top: 287px;
		z-index: 2;
		width: 40px;
		height:40px;
		background-image: url("arrow_right.png");
	}

	.arrow-up {
		position: absolute;
		right: 500px;
		top: 10px;
		z-index: 2;
		width: 40px;
		height:40px;
		background-image:url("arrow_up.png");
	}

	.arrow-down {
		position: absolute;
		right: 500px;
		bottom: 10px;
		z-index: 2;
		width: 40px;
		height:40px;
		background-image:url("arrow_down.png");

	}
	
	.arrowbutton {
		width: 30px;
		height:30px;

		border-radius:15px;
		-moz-border-radius:15px;
		-webkit-border-radius:15px;
		-khtml-border-radius:15px;
		border:#ccc 1px double;

		color:#888;
		line-height:30px;
		text-shadow:0 1px 0 #fff;
		text-decoration:none;
		text-align:center;
		background:#ddd	
	}

	.arrow-right:hover,.arrow-left:hover, .arrow-up:hover, .arrow-down:hover {
		border:#bbb 4px double;
		background-attachment:inherit;
		background-position: 15 12px !important;
		box-shadow: -2px 2px 0 rgba(0, 0, 0, 0.10);
		-moz-box-shadow: -2px 2px 0 rgba(0, 0, 0, 0.10);
		-webkit-box-shadow: -2px 2px 0 rgba(0, 0, 0, 0.10);
	}
	
	.arrow-right:active,.arrow-left:active, .arrow-up:active, .arrow-down:active {
		border:#bbb 4px double;
		background-attachment:inherit;
		background-position: 15 15px !important;
		box-shadow: 0 0 0 rgba(0, 0, 0, 0.10);
		-moz-box-shadow: 0 0 0 rgba(0, 0, 0, 0.10);
		-webkit-box-shadow: 0 0 0 rgba(0, 0, 0, 0.10);	
	}

	/* Content section styling */
        .overview {
		background-repeat: no-repeat;
		background-position: 95% 80% ;
        }


        .people {
		background-repeat: no-repeat;
		background-position: 90% 80% ;
        }

        .people a:link, a:visited {
		color: black;
		text-decoration: none;
        }

        .people a:hover {
		color: gray;
		text-decoration: underline;
        }

        .problems {
		background-repeat: no-repeat;
		background-position: 95% 80% ;
        }

        .methods {
		background-repeat: no-repeat;
		background-position: 95% 80% ;
        }

